--- a/jenkinsfile
+++ b/jenkinsfile
@@ -39,7 +39,7 @@ pipeline {
 
         stage('Deploy Container') {
             steps {
-                sh 'docker run -itd --name insurance -p 8085:8081 nikitaojha/staragileprojectinsurance:v1'
+                sh 'docker run -itd --name insurance001 -p 8085:8081 nikitaojha/staragileprojectinsurance:v1'
 }
         }
     }
